# node-backend/src/interfaces/http/refueling/RefuelingSerializer.js
@@ -1,0 +1,21 @@
+const RefuelingSerializer = {
+  serialize({
+    id,
+    litres,
+    price,
+    pricePerLitre,
+    totalKilometers,
+    dayKilometers,
+  }) {
+    return {
+      id,
+      litres,
+      price,
+      pricePerLitre,
+      totalKilometers,
+      dayKilometers,
+    };
+  },
+};
+
+module.exports = RefuelingSerializer;
