# node-backend/src/interfaces/http/router.js
@@ -6,16 +6,22 @@ const compression = require('compression');
 const methodOverride = require('method-override');
 const controller = require('./utils/createControllerRoutes');
 
-module.exports = ({ config, containerMiddleware, loggerMiddleware, errorHandler, swaggerMiddleware }) => {
+module.exports = ({
+  config,
+  containerMiddleware,
+  loggerMiddleware,
+  errorHandler,
+  swaggerMiddleware,
+}) => {
   const router = Router();
 
   /* istanbul ignore if */
-  if(config.env === 'development') {
+  if (config.env === 'development') {
     router.use(statusMonitor());
   }
 
   /* istanbul ignore if */
-  if(config.env !== 'test') {
+  if (config.env !== 'test') {
     router.use(loggerMiddleware);
   }
 
@@ -39,6 +45,7 @@ module.exports = ({ config, containerMiddleware, loggerMiddleware, errorHandler,
    */
 
   apiRouter.use('/users', controller('user/UsersController'));
+  apiRouter.use('/refuelings', controller('refueling/RefuelingsController'));
 
   router.use('/api', apiRouter);
 
