# node-backend/src/interfaces/http/swagger/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Node API boilerplate",
+    "title": "basic-refuel-app-API",
     "version": "v1"
   },
   "servers": [
@@ -14,7 +14,7 @@
     "/users": {
       "get": {
         "operationId": "listUsers",
-        "tags": [ "Users" ],
+        "tags": ["Users"],
         "responses": {
           "200": {
             "description": "List of all users",
@@ -33,7 +33,7 @@
       },
       "post": {
         "operationId": "createUser",
-        "tags": [ "Users" ],
+        "tags": ["Users"],
         "requestBody": {
           "description": "User data",
           "required": true,
@@ -72,7 +72,7 @@
     "/users/{id}": {
       "get": {
         "operationId": "showUser",
-        "tags": [ "Users" ],
+        "tags": ["Users"],
         "parameters": [
           {
             "name": "id",
@@ -108,7 +108,7 @@
       },
       "put": {
         "operationId": "updateUser",
-        "tags": [ "Users" ],
+        "tags": ["Users"],
         "parameters": [
           {
             "name": "id",
@@ -155,7 +155,7 @@
       },
       "delete": {
         "operationId": "deleteUser",
-        "tags": [ "Users" ],
+        "tags": ["Users"],
         "parameters": [
           {
             "name": "id",
@@ -182,6 +182,178 @@
           }
         }
       }
+    },
+    "/refuelings": {
+      "get": {
+        "operationId": "listRefuelings",
+        "tags": ["Refuelings"],
+        "responses": {
+          "200": {
+            "description": "List of all refuelings",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Refueling"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "operationId": "createRefueling",
+        "tags": ["Refuelings"],
+        "requestBody": {
+          "description": "Refueling data",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/NewRefueling"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "User not created because of validation error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/refuelings/{id}": {
+      "get": {
+        "operationId": "showRefueling",
+        "tags": ["Refuelings"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of refueling to show",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return refueling with given id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Refueling"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Refueling not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "operationId": "updateRefueling",
+        "tags": ["Refuelings"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of refueling to update",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "requestBody": {
+          "description": "Refueling new data",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/NewRefueling"
+              }
+            }
+          }
+        },
+        "responses": {
+          "202": {
+            "description": "Refueling updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Refueling"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Refueling not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundError"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "operationId": "deleteRefueling",
+        "tags": ["Refuelings"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of refueling to delete",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Refueling deleted successfully"
+          },
+          "404": {
+            "description": "Refueling not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundError"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -190,7 +362,7 @@
         "allOf": [
           { "$ref": "#/components/schemas/NewUser" },
           {
-            "required": [ "id" ],
+            "required": ["id"],
             "properties": {
               "id": {
                 "type": "integer",
@@ -201,10 +373,50 @@
         ]
       },
       "NewUser": {
-        "required": [ "name" ],
+        "required": ["name"],
         "properties": {
           "name": {
             "type": "string"
+          }
+        }
+      },
+      "Refueling": {
+        "allOf": [
+          { "$ref": "#/components/schemas/NewRefueling" },
+          {
+            "required": ["id"],
+            "properties": {
+              "id": {
+                "type": "integer",
+                "format": "int64"
+              }
+            }
+          }
+        ]
+      },
+      "NewRefueling": {
+        "required": [
+          "litres",
+          "price",
+          "pricePerLitre",
+          "totalKilometers",
+          "dayKilometers"
+        ],
+        "properties": {
+          "litres": {
+            "type": "number"
+          },
+          "price": {
+            "type": "number"
+          },
+          "pricePerLitre": {
+            "type": "number"
+          },
+          "totalKilometers": {
+            "type": "number"
+          },
+          "dayKilometers": {
+            "type": "number"
           }
         }
       },
@@ -212,7 +424,7 @@
         "properties": {
           "type": {
             "type": "string",
-            "enum": [ "ValidationError" ]
+            "enum": ["ValidationError"]
           },
           "details": {
             "type": "array",
@@ -236,11 +448,11 @@
         "properties": {
           "type": {
             "type": "string",
-            "enum": [ "NotFoundError" ]
+            "enum": ["NotFoundError"]
           },
           "details": {
             "type": "string",
-            "enum": [ "User with id {id} not found" ]
+            "enum": ["Entity with id {id} not found"]
           }
         }
       }
